objects/LAT_FormHeader__c.object
<CustomObject>
    <fields>
        <fullName>LAT_FH_Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FH_Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FH_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormHeader</label>
    <listViews>
        <fullName>Tudo</fullName>
        <columns>NAME</columns>
        <columns>LAT_FH_Code__c</columns>
        <columns>LAT_FH_Country__c</columns>
        <columns>LAT_FH_ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormsHeader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>